tests/parser_samples/invalid/root/2.mas
%i a {
    a;
}

%m m {
    b | c;
}